[gd_scene load_steps=21 format=3 uid="uid://c8jswe4xhc31f"]

[ext_resource type="Script" path="res://DecesionTreeScene/decision_tree.gd" id="1_l7wpw"]
[ext_resource type="Texture2D" uid="uid://p5ab88ma5evx" path="res://assets/sprites/decision_tree_sprites/mystery.png" id="2_kopy0"]
[ext_resource type="Texture2D" uid="uid://dmbtrsfc6l4x" path="res://assets/sprites/decision_tree_sprites/mystery2.png" id="3_o0ioa"]
[ext_resource type="Texture2D" uid="uid://hnqqk6twk6fq" path="res://assets/sprites/decision_tree_sprites/marketing.png" id="4_vgv8q"]
[ext_resource type="Texture2D" uid="uid://8k856v7my5wx" path="res://assets/sprites/decision_tree_sprites/marketing2.png" id="5_ox4tu"]
[ext_resource type="Texture2D" uid="uid://dsj4urf0wvxom" path="res://assets/sprites/decision_tree_sprites/simulator.png" id="6_svm5m"]
[ext_resource type="Texture2D" uid="uid://w4tnbvdhg0b1" path="res://assets/sprites/decision_tree_sprites/simulator2.png" id="7_wqkce"]
[ext_resource type="Texture2D" uid="uid://bnhtud648q17p" path="res://assets/sprites/decision_tree_sprites/raw_ore.png" id="8_fono6"]
[ext_resource type="Texture2D" uid="uid://cah0a1fqtr7at" path="res://assets/sprites/decision_tree_sprites/raw_ore2.png" id="9_7gbh0"]
[ext_resource type="Script" path="res://DecesionTreeScene/ButtonScripts.gd" id="10_dt8al"]
[ext_resource type="Texture2D" uid="uid://isxeb857xmby" path="res://assets/sprites/team_builder_sprites/panel_large.png" id="11_0gaal"]
[ext_resource type="Texture2D" uid="uid://uhddq1lnpwad" path="res://assets/sprites/decision_tree_sprites/muted_space.png" id="11_6ori3"]
[ext_resource type="Texture2D" uid="uid://btk20pv7chjrf" path="res://assets/sprites/decision_tree_sprites/arrow_active.png" id="12_pid2b"]
[ext_resource type="FontFile" uid="uid://v8x1j28jbd80" path="res://TransitionToBuilder/m5x7.ttf" id="12_umpuu"]
[ext_resource type="Texture2D" uid="uid://c7i3nl35vqui1" path="res://assets/sprites/decision_tree_sprites/arrow_inactive.png" id="13_psgvn"]
[ext_resource type="Texture2D" uid="uid://cqj8k6i6cfc7o" path="res://assets/sprites/decision_tree_sprites/start.png" id="14_x6bah"]
[ext_resource type="Texture2D" uid="uid://crauckbreb8eu" path="res://assets/sprites/decision_tree_sprites/end.png" id="15_65jos"]
[ext_resource type="PackedScene" uid="uid://cvxa20rurw0sy" path="res://character.tscn" id="18_yvaqn"]
[ext_resource type="Script" path="res://TeamBuilderScene/CharactersContainer.gd" id="19_11mk6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uc0h2"]

[node name="decision_tree" type="Node2D"]
script = ExtResource("1_l7wpw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TreeBackground" type="Sprite2D" parent="UI"]
position = Vector2(574, 322)
scale = Vector2(0.648, 0.64)
texture = ExtResource("11_6ori3")

[node name="ButtonContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Mystery" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 1585.0
offset_top = -1.0
offset_right = 2341.0
offset_bottom = 761.0
texture_normal = ExtResource("3_o0ioa")
texture_pressed = ExtResource("3_o0ioa")
texture_disabled = ExtResource("2_kopy0")

[node name="Mystery2" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 3170.0
offset_top = -2.0
offset_right = 3926.0
offset_bottom = 760.0
texture_normal = ExtResource("3_o0ioa")
texture_pressed = ExtResource("3_o0ioa")
texture_disabled = ExtResource("2_kopy0")

[node name="Robotics" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 1577.0
offset_top = 466.0
offset_right = 2287.0
offset_bottom = 1142.0
texture_normal = ExtResource("5_ox4tu")
texture_pressed = ExtResource("5_ox4tu")
texture_disabled = ExtResource("4_vgv8q")

[node name="Navigation" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 253.0
offset_top = 767.0
offset_right = 1002.0
offset_bottom = 1553.0
texture_normal = ExtResource("7_wqkce")
texture_pressed = ExtResource("7_wqkce")
texture_disabled = ExtResource("6_svm5m")

[node name="Navigation2" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 253.0
offset_top = 767.0
offset_right = 1002.0
offset_bottom = 1553.0
texture_normal = ExtResource("7_wqkce")
texture_pressed = ExtResource("7_wqkce")
texture_disabled = ExtResource("6_svm5m")

[node name="Exploration" type="TextureButton" parent="UI/ButtonContainer"]
layout_mode = 0
offset_left = 987.0
offset_top = 962.0
offset_right = 1717.0
offset_bottom = 1690.0
texture_normal = ExtResource("9_7gbh0")
texture_pressed = ExtResource("9_7gbh0")
texture_disabled = ExtResource("8_fono6")

[node name="PointsTexture" type="TextureRect" parent="UI"]
offset_left = 886.0
offset_top = 23.0
offset_right = 1116.0
offset_bottom = 90.0
texture = ExtResource("11_0gaal")
expand_mode = 1

[node name="Points" type="Label" parent="UI/PointsTexture"]
layout_mode = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 219.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("12_umpuu")
theme_override_font_sizes/font_size = 36
text = "Total Points: 169"

[node name="ButtonScripts" type="Node2D" parent="UI"]
script = ExtResource("10_dt8al")

[node name="ArrowActive1" type="Sprite2D" parent="UI"]
position = Vector2(425, -210)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive1" type="Sprite2D" parent="UI"]
position = Vector2(342, 734)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive2" type="Sprite2D" parent="UI"]
position = Vector2(261, -143)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive2" type="Sprite2D" parent="UI"]
position = Vector2(342, 743)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive3" type="Sprite2D" parent="UI"]
position = Vector2(538, -148)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive3" type="Sprite2D" parent="UI"]
position = Vector2(342, 746)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive4" type="Sprite2D" parent="UI"]
position = Vector2(665, -245)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive4" type="Sprite2D" parent="UI"]
position = Vector2(293, 739)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive5" type="Sprite2D" parent="UI"]
position = Vector2(465, -91)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive5" type="Sprite2D" parent="UI"]
position = Vector2(253, 712)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive6" type="Sprite2D" parent="UI"]
position = Vector2(465, -201)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive6" type="Sprite2D" parent="UI"]
position = Vector2(253, 712)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive7" type="Sprite2D" parent="UI"]
position = Vector2(477, -87)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive7" type="Sprite2D" parent="UI"]
position = Vector2(253, 712)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive8" type="Sprite2D" parent="UI"]
position = Vector2(455, -130)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive8" type="Sprite2D" parent="UI"]
position = Vector2(253, 712)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive9" type="Sprite2D" parent="UI"]
position = Vector2(352, -157)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive9" type="Sprite2D" parent="UI"]
position = Vector2(253, 712)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="ArrowActive10" type="Sprite2D" parent="UI"]
position = Vector2(214, -225)
scale = Vector2(0.268832, 0.20751)
texture = ExtResource("12_pid2b")

[node name="ArrowInactive10" type="Sprite2D" parent="UI"]
position = Vector2(281, 779)
scale = Vector2(0.263012, 0.205039)
texture = ExtResource("13_psgvn")

[node name="start" type="Sprite2D" parent="UI"]
position = Vector2(77, 361)
scale = Vector2(0.188477, 0.185059)
texture = ExtResource("14_x6bah")

[node name="end" type="Sprite2D" parent="UI"]
position = Vector2(1072, 373)
scale = Vector2(0.227796, 0.233536)
texture = ExtResource("15_65jos")

[node name="pos1" type="Marker2D" parent="UI"]
position = Vector2(239, 162)

[node name="pos2" type="Marker2D" parent="UI"]
position = Vector2(239, 456)

[node name="pos3" type="Marker2D" parent="UI"]
position = Vector2(525, 162)

[node name="pos4" type="Marker2D" parent="UI"]
position = Vector2(525, 456)

[node name="pos5" type="Marker2D" parent="UI"]
position = Vector2(802, 162)

[node name="pos6" type="Marker2D" parent="UI"]
position = Vector2(802, 456)

[node name="arrowpos1" type="Marker2D" parent="UI"]
position = Vector2(174, 279)

[node name="arrowpos2" type="Marker2D" parent="UI"]
position = Vector2(182, 456)

[node name="arrowpos3" type="Marker2D" parent="UI"]
position = Vector2(437, 210)

[node name="arrowpos4" type="Marker2D" parent="UI"]
position = Vector2(453, 365)

[node name="arrowpos5" type="Marker2D" parent="UI"]
position = Vector2(437, 509)

[node name="arrowpos6" type="Marker2D" parent="UI"]
position = Vector2(717, 210)

[node name="arrowpos7" type="Marker2D" parent="UI"]
position = Vector2(717, 365)

[node name="arrowpos8" type="Marker2D" parent="UI"]
position = Vector2(717, 509)

[node name="arrowpos9" type="Marker2D" parent="UI"]
position = Vector2(971, 292)

[node name="arrowpos10" type="Marker2D" parent="UI"]
position = Vector2(971, 466)

[node name="CharacterCanvas" type="CanvasLayer" parent="."]

[node name="PromptTexture" type="TextureRect" parent="CharacterCanvas"]
offset_left = 312.0
offset_top = 527.0
offset_right = 825.0
offset_bottom = 628.0
texture = ExtResource("11_0gaal")
expand_mode = 1

[node name="PromptLabel" type="Label" parent="CharacterCanvas/PromptTexture"]
layout_mode = 0
offset_left = 22.0
offset_top = 14.0
offset_right = 503.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("12_umpuu")
theme_override_font_sizes/font_size = 36
text = "Please choose a player for this task"
autowrap_mode = 3

[node name="CharacterContainer" type="HBoxContainer" parent="CharacterCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("19_11mk6")

[node name="ButtonCanvas" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="ButtonCanvas"]
color = Color(1, 1, 1, 0)

[node name="Button" type="Button" parent="ButtonCanvas/CanvasModulate"]
material = SubResource("ShaderMaterial_uc0h2")
offset_left = 170.0
offset_top = 162.0
offset_right = 404.0
offset_bottom = 476.0

[node name="Button2" type="Button" parent="ButtonCanvas/CanvasModulate"]
offset_left = 454.0
offset_top = 162.0
offset_right = 704.0
offset_bottom = 476.0

[node name="Button3" type="Button" parent="ButtonCanvas/CanvasModulate"]
offset_left = 745.0
offset_top = 162.0
offset_right = 987.0
offset_bottom = 476.0

[node name="Character" parent="." instance=ExtResource("18_yvaqn")]

[node name="ScoreIncreaseTimer" type="Timer" parent="."]

[connection signal="pressed" from="UI/ButtonContainer/Mystery" to="." method="_on_mystery_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/Mystery2" to="." method="_on_mystery_2_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/Robotics" to="." method="_on_robotics_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/Navigation" to="." method="_on_navigation_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/Navigation2" to="." method="_on_navigation_2_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/Exploration" to="." method="_on_exploration_pressed"]
[connection signal="pressed" from="ButtonCanvas/CanvasModulate/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonCanvas/CanvasModulate/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ButtonCanvas/CanvasModulate/Button3" to="." method="_on_button_3_pressed"]
[connection signal="timeout" from="ScoreIncreaseTimer" to="." method="_on_score_increase_timer_timeout"]
